--- a/Laboratorio_2/Problema 1/db/Problema_1.lpc.html
+++ b/Laboratorio_2/Problema 1/db/Problema_1.lpc.html
@@ -96,6 +96,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >u_modulo</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >u_divisor</TD>
 <TD >8</TD>
 <TD >0</TD>
